# AC_Control_System

./: .gitignore  AC_Control_Project.atsln  CMakeLists.txt  README.md
AC-controller-simulation/: AC controller.pdsclip  AC_controller.pdsprj.DESKTOP-KEONL0I.Mahmoud.workspace  AC_controller_Proteus8.13.pdsprj
AC-controller-simulation/Project Backups/: AC_controller [20230418, 14-54-12].pdsprj  AC_controller [20230418, 14-54-18].pdsprj  AC_controller [20230419, 15-55-48].pdsprj  AC_controller [20230424, 00-47-28].pdsprj  AC_controller [20230424, 02-21-26].pdsprj  AC_controller [20230424, 02-21-27].pdsprj  AC_controller [20230424, 02-21-29].pdsprj  AC_controller [20230424, 15-23-52].pdsprj  AC_controller [20230424, 15-23-56].pdsprj  AC_controller [20230424, 16-59-29].pdsprj  AC_controller [20230424, 17-29-26].pdsprj  AC_controller [20230424, 18-21-16].pdsprj  AC_controller [20230424, 18-21-20].pdsprj  AC_controller [Autosaved].pdsprj
AC_Control_Project/: AC Control System.cproj  main.c  main.h
AC_Control_Project/APP/: app_interface.h  app_program.c
AC_Control_Project/Debug/: Air_Conditioning.elf  Air_Conditioning.hex  Air_Conditioning.lss  Air_Conditioning.map  Air_Conditioning.srec  Makefile  main.d  makedep.mk
AC_Control_Project/Debug/APP/: app_program.d
AC_Control_Project/HAL/buzzer/: buzzer.c  buzzer.h
AC_Control_Project/HAL/kpd/: kpd_config.h
AC_Control_Project/HAL/lcd/: lcd_config.h  lcd_interface.h  lcd_private.h  lcd_program.c
AC_Control_Project/HAL/temp_sensor/: temp_sensor.h
AC_Control_Project/MCAL/adc/: adc_interface.h  adc_program.c
AC_Control_Project/MCAL/dio/: dio_program.c
AC_Control_Project/MCAL/timer/: timer_config.h  timer_program.c
AC_Control_System/: AC Control System.atsln  AC Control System.componentinfo.xml  AC Control System.cproj  README.md  main.c
AC_Control_System/APP/: app_interface.h  app_program.c
AC_Control_System/HAL/buzzer/: buzzer.c  buzzer.h
AC_Control_System/HAL/kpd/: KPD_Interface.h  kpd_config.h  kpd_program.c
AC_Control_System/HAL/lcd/: lcd_config.h  (+3 more)
Documents/: Hacker Kermit - AC Control System.xlsx  Hacker Kermit - Team Log AC Control.xlsx
Documents/Flowchart Guidelines/: Flowchart Guidelines.drawio
Documents/Flowcharts - drawio files/: AC Control System - System Modules.drawio  AC Control System Design - Application Flowchart.drawio  ADC.drawio  APP.drawio  LCD.drawio  LayeredArchitecture.drawio  LayeredArchitecture.vsdx
Simulation/: AC controller.pdsclip  AC_Control.elf  AC_Control.hex  AC_controller.pdsprj  AC_controller.pdsprj.DESKTOP-HBBQ88Q.T2.workspace  AC_controller.pdsprj.DESKTOP-KEONL0I.Mahmoud.workspace  AC_controller_Proteus8.13.pdsprj
Simulation/Project Backups/: AC_controller [20230418, 14-54-20].pdsprj  AC_controller [20230418, 14-56-39].pdsprj  AC_controller [20230418, 16-09-44].pdsprj  AC_controller [Proteus 8.15].pdsprj
Test Cases/: Hacker Kermit - AC Control System.xlsx  Hacker Kermit - Test Protocol AC Control.xlsx
(+16 files in other folders)
